syntax = "proto3";

package org.exploit.tron.proto;

message Any {
  string type_url = 1;
  bytes value = 2;
}

message AccountId {
  bytes name = 1;
  bytes address = 2;
}

message Authority {
  AccountId account = 1;
  bytes permission_name = 2;
}

message Raw {
  bytes ref_block_bytes = 1;
  int64 ref_block_num = 3;
  bytes ref_block_hash = 4;
  int64 expiration = 8;
  repeated Authority auths = 9;
  bytes data = 10;
  repeated Contract contract = 11;
  bytes scripts = 12;
  int64 timestamp = 14;
  int64 fee_limit = 18;
}

message Contract {
  enum ContractType {
    AccountCreateContract = 0;
    TransferContract = 1;
    TransferAssetContract = 2;
    VoteAssetContract = 3;
    VoteWitnessContract = 4;
    WitnessCreateContract = 5;
    AssetIssueContract = 6;
    WitnessUpdateContract = 8;
    ParticipateAssetIssueContract = 9;
    AccountUpdateContract = 10;
    FreezeBalanceContract = 11;
    UnfreezeBalanceContract = 12;
    WithdrawBalanceContract = 13;
    UnfreezeAssetContract = 14;
    UpdateAssetContract = 15;
    ProposalCreateContract = 16;
    ProposalApproveContract = 17;
    ProposalDeleteContract = 18;
    SetAccountIdContract = 19;
    CustomContract = 20;
    CreateSmartContract = 30;
    TriggerSmartContract = 31;
    GetContract = 32;
    UpdateSettingContract = 33;
    ExchangeCreateContract = 41;
    ExchangeInjectContract = 42;
    ExchangeWithdrawContract = 43;
    ExchangeTransactionContract = 44;
    UpdateEnergyLimitContract = 45;
    AccountPermissionUpdateContract = 46;
    ClearABIContract = 48;
    UpdateBrokerageContract = 49;
    ShieldedTransferContract = 51;
    MarketSellAssetContract = 52;
    MarketCancelOrderContract = 53;
    FreezeBalanceV2Contract = 54;
    UnfreezeBalanceV2Contract = 55;
    WithdrawExpireUnfreezeContract = 56;
    DelegateResourceContract = 57;
    UnDelegateResourceContract = 58;
    CancelAllUnfreezeV2Contract = 59;
  }
  ContractType type = 1;
  Any parameter = 2;
  bytes provider = 3;
  bytes ContractName = 4;
  int32 Permission_id = 5;
}

message TransferContract {
  bytes owner_address = 1;
  bytes to_address = 2;
  int64 amount = 3;
}

message TriggerSmartContract {
  bytes owner_address = 1;
  bytes contract_address = 2;
  int64 call_value = 3;
  bytes data = 4;
  int64 call_token_value = 5;
  int64 token_id = 6;
}