package org.exploit.tron.protocol.transaction;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.google.protobuf.ByteString;
import com.google.protobuf.GeneratedMessageV3;
import org.exploit.tron.proto.Tron;

public record TransferContractValue(
    long amount,

    @JsonProperty("owner_address") String ownerAddress,
    @JsonProperty("to_address") String toAddress
) implements ProtoValue {
    public TransferContractValue() {
        this(0L, "", "");
    }

    @Override
    public GeneratedMessageV3 toMessage() {
        return Tron.TransferContract.newBuilder()
                .setOwnerAddress(ByteString.fromHex(ownerAddress))
                .setToAddress(ByteString.fromHex(toAddress))
                .setAmount(amount)
                .build();
    }
}