package org.exploit.tron.protocol.transaction;

import com.fasterxml.jackson.annotation.JsonProperty;
import com.google.protobuf.ByteString;
import com.google.protobuf.GeneratedMessageV3;

import static org.exploit.tron.proto.Tron.TriggerSmartContract;

public record TriggerSmartContractValue(
    String data,
    @JsonProperty("owner_address") String ownerAddress,
    @JsonProperty("contract_address") String contractAddress
) implements ProtoValue {
    public TriggerSmartContractValue() {
        this("", "", "");
    }

    @Override
    public GeneratedMessageV3 toMessage() {
        return TriggerSmartContract.newBuilder()
                .setData(ByteString.fromHex(data))
                .setOwnerAddress(ByteString.fromHex(ownerAddress))
                .setContractAddress(ByteString.fromHex(contractAddress))
                .build();
    }
}